# miga

./: .gitignore  .gitmodules  README.md  README.rst  requirements.readthedocs.txt
docs/python/: Makefile  make.bat
docs/python/source/: conf.py  index.rst
docs/python/source/pages/user_reference/: miga.MIGA.rst  user_reference.rst
examples/: first_example.py  pairs.npy  sequence_a.txt  sequence_b.txt
maintainer/: build_dist.sh  pypi_upload.sh  update_version.sh
package/: AUTHORS  CHANGELOG  MANIFEST.in  README.rst  cuda_build.py  setup.py
package/miga/: Population.pxd  __init__.py  miga.pyx  types.pxd
package/miga/src/: CPUPopulation.cpp  CPUPopulation.hpp  GPUPopulation.cu  GPUPopulation.hpp  Population.cpp  Population.hpp  SimpleGPUPopulation.cu  SimpleGPUPopulation.hpp  cuda_tools.cuh  types.h
tests/: all_tests.py  msa.npz  test_MIGA.py  test_ga.py  test_miga_api.py
tests/cpp/: CMakeLists.txt  MatData.hpp  all_tests.sh  ga_tests.cpp  main.cpp  test_tools.hpp
tests/python/: test_ga.py  test_miga_api.py
tests/python/data_files/: fitness_data.double.npz  fitness_data.single.npz
